# boteye_driver

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  calib_convert_to_half.cpp  calib_io_demo.cpp  driver_demo.cpp  readme.md
app/cmake/Modules/: FindYaml.cmake
app/config/: ir_depth_param.yaml
app/depth_demo/: CMakeLists.txt  depth_demo.cpp
app/include/XP/helper/: param.h
app/libs/: README.txt
app/libs_x86_64_14.04/: README.txt
app/libs_x86_64_16.04/: README.txt
app/tests/: CMakeLists.txt  ring_buffer_test.cpp  white_balance_test.cpp
include/driver/: XP_sensor.h  XP_sensor_driver.h  basic_datatype.h  v4l2.h
include/driver/helper/: basic_image_utils.h
src/: XP_sensor.cc  XP_sensor_driver.cc  v4l2.cc
src/helper/: basic_image_utils.cc
utils/: config_githook.sh  cpplint_all.sh  exposure_table.py  exposure_table_ar0141.py
utils/git_hooks/: pre-commit  pre-push
